--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "html-to-image": "^1.11.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sql-formatter": "^15.6.9",
-    "html-to-image": "^1.11.11"
+    "sql-formatter": "^15.6.9"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
     "gh-pages": "^6.1.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
