--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "sql-formatter": "^15.6.9",
-    "html-to-image": "^1.11.11"
+    "html-to-image": "^1.11.11",
+    "@tailwindcss/postcss": "^4.1.13",
+    "postcss": "^8.5.6",
+    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
