--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
-  }
+  },
+  "homepage": "https://meruuuuooo.github.io/SQLFormatter"
 }
