--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "html-to-image": "^1.11.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "sql-formatter": "^15.6.9",
-    "html-to-image": "^1.11.11"
+    "sql-formatter": "^15.6.9"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.13",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   },
-  "homepage": "https://meruuuuooo.github.io/SQLFormatter"
+  "homepage": "https://meruuuuooo.github.io/SQLFormatter",
+  "description": "A modern, web-based SQL formatter with real-time preview and customizable styling options. This tool helps developers format their SQL queries with proper indentation, keyword capitalization, and syntax highlighting.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/meruuuuooo/SQLFormatter.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/meruuuuooo/SQLFormatter/issues"
+  }
 }
