--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
-  "name": "sql-formatter",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "html-to-image": "^1.11.11",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "sql-formatter": "^15.6.9"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "gh-pages": "^6.3.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
+	"name": "sql-formatter",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"homepage": "https://meruuuuooo.github.io/SQLFormatter",
+	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist"
+	},
+	"dependencies": {
+		"html-to-image": "^1.11.11",
+		"react": "^19.1.1",
+		"react-dom": "^19.1.1",
+		"sql-formatter": "^15.6.9"
+	},
+	"devDependencies": {
+		"@types/node": "^22.14.0",
+		"@vitejs/plugin-react": "^5.0.0",
+		"gh-pages": "^6.3.0",
+		"typescript": "~5.8.2",
+		"vite": "^6.2.0"
+	}
 }
